[package]
name = "raffler"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.1"
futures-util = "0.3"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }

serde = "1.0.219"
serde_json = "1.0.139"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "chrono", "postgres"] }
chrono = { version="0.4.40", features = ["serde"]}
