[package]
name = "raffler"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7" }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
